Rough concept for landing/log-in page.

--- a/view_mockups/index.html
+++ b/view_mockups/index.html
@@ -7,8 +7,18 @@
         <link href="css/pynance.css" rel="stylesheet" media="screen">
     </head>
     <body>
-        <div class="login_matter">
-            <h1>Hello, world!</h1>
+        <div class="head_box">
+            <div class="login_box">
+                <form>
+                    <input type="text" placeholder="Username" style="width: 100%; box-sizing: border-box; height: 32px;"><br>
+                    <input type="password" placeholder="Password" style="width: 100%; box-sizing: border-box; height: 32px;"><br>
+                    <input type="submit" value="Log-in" class="btn btn-primary">
+                    <input type="button"value="Sign-up" class="btn">
+                </form>
+            </div>
+            <div class="ads_box">
+                <h1>Pynance</h1>
+            </div>
         </div>
     </body>
 </html>
