--- a/view_mockups/index.html
+++ b/view_mockups/index.html
@@ -18,6 +18,7 @@
             </div>
             <div class="ads_box">
                 <h1>Pynance</h1>
+                <p>Manage your finances</p>
             </div>
         </div>
     </body>
